compiler/tests-spec/testData/codegen/box/notLinked/objects/inheritance/neg/7.kt
/*
 * KOTLIN CODEGEN BOX NOT LINKED SPEC TEST (NEGATIVE)
 *
 * SECTIONS: objects, inheritance
 * NUMBER: 7
 * DESCRIPTION: Access to class members in the super constructor call of an object.
 * UNEXPECTED BEHAVIOUR
 * ISSUES: KT-25289
 * EXCEPTION: runtime
 */

open class Foo(val x: Int)

object MyObject : Foo(MyObject.x)

fun box(): String? {
    if (MyObject == null) return null

    return "OK"
}
